Fix cj sum on dark mode

--- a/app/components/views/GetStartedPage/SetMixedAcctPage/SetMixedAcctPage.module.css
+++ b/app/components/views/GetStartedPage/SetMixedAcctPage/SetMixedAcctPage.module.css
@@ -48,6 +48,7 @@
 
 .coinjoinSum {
   background-color: var(--coinjoin-sum-color);
+  color: var(--coinjoin-sum-text-color);
   padding: 2px;
   border-radius: 5px;
 }
